--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand fs-2" href="/">Life in the Saddle: Tales and Tips from an Equestrian Enthusiast</a>
+{{!-- Below is the button for navbar --}}
           <button
             class="navbar-toggler"
             type="button"
@@ -32,10 +33,12 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/dashboard">Dashboard</a>
                 </li>
+{{!-- checking if the user is logged in or not --}}
               {{#if logged_in}}
                 <li class="nav-item">
                   <a class="nav-link" href="#" id="equine-logout">Logout</a>
                 </li>
+{{!--  If the user is not logged in, it will as user to log in and/or signup --}}
               {{else}}
                 <li class="nav-item">
                   <a class="nav-link" href="/login">Login</a>
@@ -52,6 +55,7 @@
     <div class="container" style="margin-bottom: 15vh;">
       {{{body}}}
     </div>
+{{!-- added a footer with my name and 2023 ARR --}}
 <footer class="bg-dark text-white py-3" style="position: fixed; bottom: 0; width: 100%;">
   <div class="container">
     <div class="row justify-content-center">
