debugged my code

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,8 +60,9 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6 text-center">
-        <h5>&copy; Designed by BerkeleyCodingMomma</h5>
-        <h6>&copy; 2023 All Rights Reserved.</h6>
+        <h5>&copy; "There's something about life in the saddle that makes the rest of the world fade away. It's just you and your horse, working together towards a common goal. All the stress, worries, and distractions of everyday life disappear in the rhythm of hoofbeats."</h5>
+        <h6>&copy; Designed by BerkeleyCodingMomma</h6>
+        <h7>&copy; 2023 All Rights Reserved.</h7>
       </div>
     </div> 
   </div>
