--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -9,7 +9,7 @@
   }
   
   body {
-    background-image: url('/public/images/horse\ and\ saddle\ pic\ 3.jpg');
+    background-image: url('/images/horse\ and\ saddle\ pic\ 3.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
