debugged in New-post.js

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -2,11 +2,43 @@
   <h2 class="mb-4">Create a Blog Contribution.</h2>
   <form class="new-equine-post-form">
     <div class="mb-3">
-      <label for="title-new-equine-post" class="form-label">Title:</label>
+      <label for="title-new-equine-post-form" class="form-label">Title:</label>
       <input
         type="text"
         class="form-control"
-        id="title-new-equinw-post"
+        id="title-new-equine-post-form"
+        placeholder="Enter a title of your choice"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="content-new-equine-post-form" class="form-label">Content:</label>
+      <textarea
+        class="form-control"
+        id="content-new-equine-post-form"
+        rows="5"
+        placeholder="Enter content here"
+      ></textarea>
+    </div>
+    <div class="mb-3">
+      <button type="submit" class="btn btn-primary">Create Post</button>
+    </div>
+  </form>
+</div>
+
+
+
+
+
+
+{{!-- <div class="container mt-5">
+  <h2 class="mb-4">Create a Blog Contribution.</h2>
+  <form class="new-equine-post-form">
+    <div class="mb-3">
+      <label for="title-new-equine-post-form" class="form-label">Title:</label>
+      <input
+        type="text"
+        class="form-control"
+        id="title-new-equine-post-form"
         placeholder="Enter a title of your choice"
       />
     </div>
@@ -23,4 +55,4 @@
       <button type="submit" class="btn btn-primary">Create Post</button>
     </div>
   </form>
-</div>
+</div> --}}
