--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -1,6 +1,6 @@
 <main class="container mt-5">
   <h1 class="mb-4">Edit Post</h1>
-  <form class="update-equine-post-form" class="mb-3">
+  <form class="update-equine-post-form mb-3">
     <div class="mb-3">
       <label for="title-update-equine-post" class="form-label">Title</label>
       <input
