--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Life in the Saddle: Tales and Tips from an Equestrian Enthusiast</title>
+    <title>Life in the Saddle</title>
   <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"/>
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="/">Life in the Saddle: Tales and Tips from an Equestrian Enthusiast</a>
+          <a class="navbar-brand fs-2" href="/">Tales and Tips from an Equestrian Enthusiast</a>
 {{!-- Below is the button for navbar --}}
           <button
             class="navbar-toggler"
@@ -60,7 +60,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6 text-center">
-        <h5>"There's something about life in the saddle that makes the rest of the world fade away. It's just you and your horse, working together towards a common goal. All the stress, worries, and distractions of everyday life disappear in the rhythm of hoofbeats."</h5>
+        <h5>""In riding a horse we borrow freedom." - Helen Thompson"</h5>
         <h6>Designed by BerkeleyCodingMomma</h6>
         <h7>&copy; 2023 All Rights Reserved.</h7>
       </div>
