--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,7 +6,7 @@
     </div>
   </div>
   <br>
-  <h1 class="mb-4">Life in the Saddle: Tales and Tips from an Equestrian Enthusiast</h1>
+  <h1 class="mb-4">Life in the Saddle</h1>
   {{#each posts}}
     <div class="post-container post mb-3">
       <h2><a href="/post/{{id}}" class="text-decoration-none text-reset">{{title}}</a></h2>
