--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand fs-2" href="/">Tales and Tips from an Equestrian Enthusiast</a>
+          <a class="navbar-brand fs-2" href="/">Life in the Saddle</a>
 {{!-- Below is the button for navbar --}}
           <button
             class="navbar-toggler"
