--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <main class="container mt-5">
-  <h1 class="mb-4 text-white">Life in the Saddle</h1>
+  <h1 class="mb-4 text-white">Tales and Tips from an Equestrian Enthusiast</h1>
   <div class="row">
     {{#each posts}}
       <div class="col-md-4">
